# platform-harness

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: implementation-validator.md
.claude/commands/: add-feature.md  review-docs.md  setup-project.md
.claude/hooks/: check_tasklist_complete.py
.codex/: README.md
.codex/agents/: doc-reviewer.toml  implementation-validator.toml
.codex/hooks/: check_tasklist_complete.py
.github/: pull_request_template.md
.github/workflows/: steering-lint.yml
.kiro/: README.md
.kiro/agents/: doc-reviewer.md  implementation-validator.md  sdd.json
.kiro/hooks/: check_tasklist_complete.py
.steering/20260627-readme-template/: design.md  requirements.md  tasklist.md
.steering/20260715-zz-distill-non-overlap-canonical-sync/: design.md  requirements.md  tasklist.md
.steering/20260715-zzz-derived-project-rollout/: design.md  requirements.md  tasklist.md
.steering/20260715-zzzz-record-outfit-v1-3-0-rollout/: design.md  requirements.md  tasklist.md
.steering/20260724-fix-outfit-rollout-acceptance-checks/: design.md  requirements.md  tasklist.md
.steering/20260724-terminal-gate-ordering/: design.md  requirements.md  tasklist.md
docs/: derived-projects.md  external-automation-policy.md  harness-guide.md
docs/ideas/: harness-engineering.md  harness-swap.md  template-unification.md
docs/procedures/: add-feature.md  (+7 more)
scripts/: check_pr_file_overlap.py  local_quality_gate.py  metered_automation_lint.py  metered_automation_policy.json  steering_lint.py
(+31 files in other folders)
